tests/admission-webhook/webhook/base/test_data/expected/rbac.authorization.k8s.io_v1_clusterrole_admission-webhook-kubeflow-poddefaults-admin.yaml
aggregationRule:
  clusterRoleSelectors:
  - matchLabels:
      rbac.authorization.kubeflow.org/aggregate-to-kubeflow-poddefaults-admin: "true"
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  labels:
    app: admission-webhook
    kustomize.component: admission-webhook
    rbac.authorization.kubeflow.org/aggregate-to-kubeflow-admin: "true"
  name: admission-webhook-kubeflow-poddefaults-admin
rules: []
