tests/admission-webhook/webhook/base/test_data/expected/~g_v1_configmap_admission-webhook-admission-webhook-parameters.yaml
apiVersion: v1
data:
  namespace: kubeflow
kind: ConfigMap
metadata:
  labels:
    app: admission-webhook
    kustomize.component: admission-webhook
  name: admission-webhook-admission-webhook-parameters
  namespace: kubeflow
