tests/admission-webhook/webhook/base/test_data/expected/~g_v1_service_admission-webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: admission-webhook
    kustomize.component: admission-webhook
  name: admission-webhook-service
  namespace: kubeflow
spec:
  ports:
  - port: 443
    targetPort: 443
  selector:
    app: admission-webhook
    kustomize.component: admission-webhook
